--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Tue Aug 30 21:34:21 MST 2011
+#Mon Sep 12 20:26:31 MST 2011
 app.grails.version=2.0.0.M1
 app.name=EngineeringEducationResearch
 app.servlet.version=2.5
 app.version=0.1
+plugins.codenarc=0.15
 plugins.spring-security-core=1.2.1
