--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Tue Sep 13 11:01:18 MST 2011
+#Thu Sep 29 20:04:46 MST 2011
 app.grails.version=2.0.0.M2
 app.name=EngineeringEducationResearch
 app.servlet.version=2.5
 app.version=0.1
+plugins.cloud-foundry=1.1.1
 plugins.codenarc=0.15
 plugins.spring-security-core=1.2.1
